--- a/style.css
+++ b/style.css
@@ -241,6 +241,10 @@ cursor: pointer;
         flex-direction: column;
         gap: 20px;
     }
+
+    .hero-text{
+        margin: 0;
+    }
     .text-box{
         font-size: 24px;
         text-align: center;
@@ -255,11 +259,18 @@ cursor: pointer;
 @media only screen and (max-width: 480px){
 
     .hero-text > h1{
-        font-size: 32px;
+        font-size: 24px;
+        line-height: 40px;
+    }
+
+    .Btn{
+        border-radius: 30px;
+        padding: 12px 25px;
+        font-size: 15px;
     }
 
     .text-box{
-        font-size: 24px;
+        font-size: 22px;
         text-align: center;
         position: static;
         padding: 30px 20px;
