--- a/style.css
+++ b/style.css
@@ -220,6 +220,10 @@ cursor: pointer;
 
 @media only screen and (max-width: 768px){
 
+    .logo{
+        width: 70px;
+    }
+
     .hero-text > h1{
         font-size: 36px;
     }
@@ -257,6 +261,10 @@ cursor: pointer;
 
 
 @media only screen and (max-width: 480px){
+
+    .logo{
+        width: 65px;
+    }
 
     .hero-text > h1{
         font-size: 24px;
